<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_name"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_password2"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
        android:id="@+id/labelTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_tipodetarjeta" />

    <RadioGroup
        android:id="@+id/tipoTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/debito"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_debito" />

        <RadioButton
            android:id="@+id/credito"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_credito" />

    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/numeroTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/string_tarjeta"
            android:maxLength="18"
            android:inputType="number"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/numeroCCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/string_CCV"
            android:maxLength="3"
            android:inputType="number"
            android:importantForAutofill="no" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <TextView
        android:id="@+id/labelFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_fecha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/string_mes"
            android:maxLength="2"
            android:inputType="date"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/anio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/string_anio"
            android:maxLength="4"
            android:inputType="date"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <EditText
        android:id="@+id/CBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="22"
        android:inputType="number"
        android:hint="@string/string_cbu"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/aliasCBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:hint="@string/string_aliascbu"
        android:importantForAutofill="no" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="17dp" />

    <Switch
        android:id="@+id/cargaInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_cargaInicial" />

    <TextView
        android:id="@+id/textoCarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_carga"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/barraCarga"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:max="1500"
        android:visibility="gone"
        tools:visibility="gone" />

    <CheckBox
        android:id="@+id/terminos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_terminos" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_registrar" />

</LinearLayout>